--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "generate": "truffle compile && typechain --target truffle './build/**/*.json'",
     "coverage": "yarn run generate && solidity-coverage",
     "test": "yarn run generate && truffle test",
-    "bindings:ts": "truffle compile && typechain --target web3-1.0.0 './build/**/*.json'",
+    "bindings:ts": "truffle compile && typechain --target web3-v1 './build/**/*.json'",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "patch-package",
