--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.0",
+    "@types/node": "^12.12.5",
     "bignumber.js": "^9.0.0",
     "bn.js": "^5.0.0",
     "chai": "^4.2.0",
@@ -38,7 +38,7 @@
     "patch-package": "^6.2.0",
     "solc": "0.5.12",
     "solidity-coverage": "^0.6.7",
-    "truffle": "5.0.42",
+    "truffle": "^5.0.43",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "0.3.0",
     "truffle-typings": "^1.0.8",
